清理储存索引与搜索的 Java 8 API